--- a/index.html
+++ b/index.html
@@ -19,20 +19,27 @@
   </header>
 
  
+ <p> Commencer par un job d'été à la Banque Postale pendant les études fait qu'on s'attache aux valeurs de l'entreprise. Ainsi on arrive à obtenir un cdi, bien qu'ayant évolué et occupé plusieurs rôle au sein de l'entreprise, je souhaite rapproché le travail de ma passion le numérique en général.  </P>
  <div class="principal">
- <section>
   <h5> Mes raisons de rejoindre la formation : </h5>
   <ul>
-  <li> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam nec sagittis massa. Nulla facilisi. Cras id arcu lorem, et semper purus. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Duis vel enim mi, in lobortis sem. Vestibulum luctus elit eu libero ultrices id fermentum sem sagittis. Nulla imperdiet mauris sed sapien dignissim id aliquam est aliquam. Maecenas non odio ipsum, a elementum nisi. Mauris non erat eu erat placerat convallis. Mauris in pretium urna. Cras laoreet molestie odio, consequat consequat velit commodo eu. Integer vitae lectus ac nunc posuere pellentesque non at eros. Suspendisse non lectus lorem.</li>
-  <li> Vivamus sed libero nec mauris pulvinar facilisis ut non sem. Quisque mollis ullamcorper diam vel faucibus. Vestibulum sollicitudin facilisis feugiat. Nulla euismod sodales hendrerit. Donec quis orci arcu. Vivamus fermentum magna a erat ullamcorper dignissim pretium nunc aliquam. Aenean pulvinar condimentum enim a dignissim. Vivamus sit amet lectus at ante adipiscing adipiscing eget vitae felis. In at fringilla est. Cras id velit ut magna rutrum commodo. Etiam ut scelerisque purus. Duis risus elit, venenatis vel rutrum in, imperdiet in quam. Sed vestibulum, libero ut bibendum consectetur, eros ipsum ultrices nisl, in rutrum diam augue non tortor. Fusce nec massa et risus dapibus aliquam vitae nec diam.</li>
-  <li> Phasellus ligula massa, congue ac vulputate non, dignissim at augue. Sed auctor fringilla quam quis porttitor. Praesent vitae dignissim magna. Pellentesque quis sem purus, vel elementum mi. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Maecenas consectetur euismod urna. In hac habitasse platea dictumst. Quisque tincidunt porttitor vestibulum. Ut iaculis, lacus at molestie lacinia, ipsum mi adipiscing ligula, vel mollis sem risus eu lectus. Nunc elit quam, rutrum ut dignissim sit amet, egestas at sem.
+  <li>La formation Simplon permet de se former de façon pro active tout en apportant un cadre à l'étudiant.  </li>
+  <li> Elle se passe en alternance ce qui permet de mettre en pratique ce que l'on apprend directement dans un contexte professionelle</li>
+  <li> Le travail en équipe et de façon autonome permet de prendre rapidement de l'expérience en s'aidant des compétences et qualité des collègues. 
  </li>
-  
+  <li> La méthode d'apprentissage de l'école permet une meilleure compréhension de l'élève en le faisant participer à la réflexion</li>
+  <li>Les valeurs  de l'école qui défendent la parité  et le code pour tous me correspondent. </li>
+  <li>Permet de devenir developpeur web mobile,ainsi que travailler au sein d'une équipe de developpement de la Banque Postale et participer à ses innovations numériques. </li>
   </ul>
-  </section>
+ 
 
   
   </div>
+  <aside><ul>
+  <li><a href="https://www.codecademy.com/profiles/dalaizekevin"><img  src="media/codecademy.png"/></a></li>
+  <li><a href="https://www.linkedin.com/in/kevin-dalaize-bb4a61211"><img  src="media/linkedin.png"/></a></li>
+  </ul>
+  </aside>
   <footer>
   <a href="https://fr.freepik.com/photos/fond">Fond photo créé par tirachard - fr.freepik.com</a>
   </footer>
