--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
   </ul>
   </aside>
   <footer>
-  <a href="https://fr.freepik.com/photos/fond">Fond photo créé par tirachard - fr.freepik.com</a>
+  <a href='https://fr.freepik.com/photos/maison'>Maison photo créé par rawpixel.com - fr.freepik.com</a>
   </footer>
   </body>
 </html>
