--- a/index.html
+++ b/index.html
@@ -10,14 +10,25 @@
   
 
   <body>
- 
+ <div id="bloc">
  
   <header>
-  
-  <h1 class="titre">Kevin Dalaize</h1>
-  <img src="media/keluanda.png" class="avatar"/>
+   <div class="reseau">
+  <div id="logo">
+<img src="media/keluanda.png" class="avatar"/>
+ <h1 class="titre">Kevin Dalaize</h1>
+  </div>
+
+    <ul>
+  <li><a href="https://www.codecademy.com/profiles/dalaizekevin"><img  src="media/codecademy.png"/></a></li>
+  <li><a href="https://www.linkedin.com/in/kevin-dalaize-bb4a61211"><img  src="media/linkedin.png"/></a></li>
+  <li><a href="https://www.hackerrank.com/Kdalaize"><img  src="media/hakerank.png"/></a></li>
+  </ul>
+  </div>  
   </header>
 
+                  
+               
  
  <p> Commencer par un job d'été à la Banque Postale pendant les études fait qu'on s'attache aux valeurs de l'entreprise. Ainsi on arrive à obtenir un cdi, bien qu'ayant évolué et occupé plusieurs rôle au sein de l'entreprise, je souhaite rapproché le travail de ma passion le numérique en général.  </P>
  <div class="principal">
@@ -35,13 +46,11 @@
 
   
   </div>
-  <aside><ul>
-  <li><a href="https://www.codecademy.com/profiles/dalaizekevin"><img  src="media/codecademy.png"/></a></li>
-  <li><a href="https://www.linkedin.com/in/kevin-dalaize-bb4a61211"><img  src="media/linkedin.png"/></a></li>
-  </ul>
-  </aside>
+ 
+  
   <footer>
   <a href='https://fr.freepik.com/photos/maison'>Maison photo créé par rawpixel.com - fr.freepik.com</a>
   </footer>
+  </div>
   </body>
 </html>
